# questionpy-sdk

./: .flake8  .gitignore  README.md  build.py  coverage.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: questionpy.md  questionpy_sdk.md
docs/questionpy/: index.md
docs/questionpy/form/: index.md  validation.md
docs/reference/: questionpy.md  questionpy_sdk.md
example/: main.py  qpy_config.yml  qpy_manifest.json  qpy_manifest.yml
example/python/local/example/: __init__.py  form.py  main.py  multiple-choice.xhtml  question_type.py
example/python/local/example/templates/: feedback.xhtml.j2  formulation.xhtml.j2
examples/full/: .gitignore  README.md  package-lock.json  package.json  qpy_config.yml  rollup.config.mjs  tsconfig.json
examples/full/python/local/full_example/: form.py  question_type.py
examples/full/python/local/full_example/templates/: formulation.xhtml.j2
examples/full/src/: styles.scss
examples/javascript/: qpy_config.yml
examples/javascript/python/local/js_example/: __init__.py  form.py  question_type.py
examples/minimal/: qpy_config.yml
examples/minimal/python/local/minimal_example/: __init__.py  form.py  question_type.py
examples/minimal/python/local/minimal_example/templates/: formulation.xhtml.j2
questionpy/: __init__.py  _attempt.py  _qtype.py  _ui.py  _util.py  form.py
questionpy/form/: __init__.py  _conditions.py  _dsl.py  _elements.py  _model.py  validation.py
questionpy/sdk/: __main__.py  logging.py  manifest.py  qtype.py  runtime.py  server.py
questionpy/sdk/commands/: package.py  run.py
questionpy/sdk/model/: messages.py
questionpy/templates/: question.xhtml.j2  subquestion.xhtml.j2
questionpy_sdk/: __main__.py  constants.py  logging.py  messages.py  models.py  package.py  runtime.py  server.py
questionpy_sdk/commands/: _helper.py  create.py  package.py  run.py
questionpy_sdk/commands/repo/: __init__.py  _helper.py  index.py  structure.py
questionpy_sdk/package/: _helper.py  builder.py  errors.py  source.py
questionpy_sdk/resources/: __init__.py
questionpy_sdk/webserver/: app.py  attempt.py  context.py  elements.py  question_ui.py  state_storage.py
questionpy_sdk/webserver/routes/: attempt.py  options.py
questionpy_sdk/webserver/static/: conditions.js  script.js  styles.css  utils.js
questionpy_sdk/webserver/templates/: attempt.html.jinja2  macros.jinja2  options.html.jinja2  page.html.jinja2
questionpy_sdk/webserver/templates/elements/: checkbox.html.jinja2  checkbox_group.html.jinja2  element.html.jinja2  hidden.html.jinja2  input.html.jinja2  radio_group.html.jinja2  select.html.jinja2  static_text.html.jinja2  textarea.html.jinja2
tests/: conftest.py  mocks.py  test_form.py  test_models.py  test_qtype.py  test_runtime.py  test_server.py
tests/cli/: __init__.py  conftest.py  test_create.py  test_package.py  test_run.py
tests/cli/repo/: conftest.py  test_index.py  test_structure.py
tests/form/: test_dsl.py  test_validation.py
tests/package/: conftest.py  test_package_builder.py  test_package_source.py
tests/webserver/: conftest.py  test_context.py  test_page.py  test_question_ui.py  test_state_storage.py
tests/webserver/question_uis/: all-parts.xhtml  buttons.xhtml  feedbacks.xhtml  format-floats.xhtml  ids_and_names.xhtml  if-role.xhtml  metadata.xhtml  placeholder.xhtml  shuffle.xhtml  shuffled-index.xhtml  validations.xhtml
