[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "questionpy-sdk"
description = "Library and toolset for the development of QuestionPy packages"
authors = ["innoCampus <info@isis.tu-berlin.de>"]
license = "MIT"
homepage = "https://questionpy.org"
version = "0.2.0"
packages = [
    { include = "questionpy" },
    { include = "questionpy_sdk" }
]
include = ["questionpy_sdk/resources/example.zip"]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
click = "8.1.3"
python = "^3.9"
aiohttp = "^3.8.1"
pydantic = "^2.4, <2.6"
PyYAML = "^6.0"
questionpy-common = { git = "https://github.com/questionpy-org/questionpy-common.git", rev = "cdc3bad516df137651e14d81fb6d1bfde11ceaaf" }
questionpy-server = { git = "https://github.com/questionpy-org/questionpy-server.git", rev = "a87322bef6ee18407bd47aa1b0ccf0865a9421d0" }
jinja2 = "^3.1.2"
aiohttp-jinja2 = "^1.5"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-md = "^0.2.0"
pylint-pytest = "^1.1.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"
types-PyYAML = "^6.0.11"
coverage = { extras = ["toml"], version = "^7.2.1" }
tox = "^4.2.6"
selenium = "^4.11.2"

[tool.poetry.scripts]
questionpy-sdk = 'questionpy_sdk.__main__:cli'

[tool.pytest.ini_options]
addopts = "--doctest-modules"
# https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = "auto"


# This section is read automatically by Coverage.py when its working directory is .
# https://coverage.readthedocs.io/en/6.5.0/config.html#configuration-reference
[tool.coverage.run]
branch = true
source = ["questionpy", "questionpy_sdk"]


[tool.pylint]

[tool.pylint.MAIN]
extension-pkg-allow-list = "pydantic"
# pylint_pytest removes some false positives when checking tests
load-plugins = "pylint_pytest"
fail-on = ["E", "F"]
fail-under = 8

[tool.pylint.BASIC]
# Allow these well-known names despite usual naming conventions
good-names = ["i", "j", "k", "e", "ex", "fs", "_", "id"]
# Allow any name for test methods
function-rgx = "^test_.+|[a-z0-9_]+$"

[tool.pylint.VARIABLES]
allowed-redefined-builtins = ["help"]

[tool.pylint.CLASSES]
valid-metaclass-classmethod-first-arg = "mcs"

[tool.pylint.DESIGN]
max-attributes = 15
max-branches = 15

[tool.pylint.REPORTS]
output-format = "colorized"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring", "missing-class-docstring", "missing-function-docstring",
    "unused-wildcard-import", "too-few-public-methods",
]
enable = ""

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"
indent-after-paren = 4
indent-string = "    "
max-line-length = 120

[tool.pylint.IMPORTS]
allow-wildcard-with-all = true

[tool.pylint.TYPECHECK]
ignored-classes = ["_SectionInfo", "_FieldInfo", "_StaticElementInfo"]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true


[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py{39,310,311}-pytest
    pylint
    flake8
    mypy

minversion = 4.2.6

[testenv]
allowlist_externals = poetry
# tox already installs the package (und thus its main dependencies) for us, so we only install dev dependencies here.
commands_pre =
    poetry install --no-root --without main
commands =
    coverage run -m pytest {tty:--color=yes} tests {posargs}

[testenv:pylint]
commands =
    pylint questionpy questionpy_sdk tests

[testenv:flake8]
commands =
    flake8 questionpy questionpy_sdk tests

[testenv:mypy]
commands =
    mypy questionpy questionpy_sdk tests
"""
