[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "questionpy-sdk"
description = "Library and toolset for the development of QuestionPy packages"
authors = ["innoCampus <info@isis.tu-berlin.de>"]
license = "MIT"
homepage = "https://questionpy.org"
version = "0.2.0"
packages = [
    { include = "questionpy" },
    { include = "questionpy_sdk" }
]
include = ["questionpy_sdk/resources/example.zip"]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.scripts]
questionpy-sdk = 'questionpy_sdk.__main__:cli'

[tool.poetry.dependencies]
click = "^8.1.7"
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"
PyYAML = "^6.0.1"
questionpy-common = { git = "https://github.com/questionpy-org/questionpy-common.git", rev = "d19ad74856e9ee86e6dffe7a85dc0fd418546af6" }
questionpy-server = { git = "https://github.com/questionpy-org/questionpy-server.git", rev = "51dfbfe59ddcfd746a990ed1d30476aa752c2485" }
jinja2 = "^3.1.3"
aiohttp-jinja2 = "^1.6"
lxml = "~5.1.0"

[tool.poetry.group.dev.dependencies]
types-PyYAML = "^6.0.12.20240311"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-aiohttp = "^1.0.5"
pytest-md = "^0.2.0"
coverage = { extras = ["toml"], version = "^7.4.4" }
selenium = "^4.19.0"
lxml-stubs = "^0.5.1"

[tool.poetry.group.linter]
dependencies = { ruff = "^0.3.5" }
optional = true

[tool.poetry.group.type-checker]
dependencies = { mypy = "^1.9.0" }
optional = true

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["mcs", "test_*"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__get_pydantic_core_schema__"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
# https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = "auto"

# This section is read automatically by Coverage.py when its working directory is .
# https://coverage.readthedocs.io/en/6.5.0/config.html#configuration-reference
[tool.coverage.run]
branch = true
source = ["questionpy", "questionpy_sdk"]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
exclude = [
    "/example/",
]
